--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     margin: 0px auto;
     max-width: 1180px; /* ⚠️ ОБРАТИ ВНИМАНИЕ - максимальная ширина увеличилась на размер отступов, чтобы ширина контента оставалась корректной */
     /* 📍 Свойство для внутрених отступов */
-    margin: 0 20px;
+    padding: 0 20px;
 }
 
 body {
@@ -145,6 +145,7 @@ select:hover,
 form {
     margin-bottom: 40px;
     /* 📍 Свойства для расположения элементов (инпута и кнопки) и отступа между ними */
+    gap: 10px;
 }
 
 .text-field {
@@ -254,7 +255,7 @@ footer {
 @media screen and (max-width: 576px) {
     .main-section {
         /* 📍 Внутренние отступы сверху и снизу */
-        padding: 30px 20px;
+        padding: 30px 0 60px;
     }
 
     .main-section .wrapper {
